# vehicle_odometry

./: .gitignore  LICENSE  README.md
src/bicycle_model_odometry/: CMakeLists.txt  package.xml
src/bicycle_model_odometry/bag_files/: driving_status.bag
src/bicycle_model_odometry/include/: odometry_calculater.h
src/bicycle_model_odometry/launch/: default.launch
src/bicycle_model_odometry/src/: odometry_calculater.cpp
src/bycycle_model_odometry/: .clang-format  CMakeLists.txt  package.xml
src/bycycle_model_odometry/bag_files/: driving_status_1.bag  vehicle_parameters_2023-08-22-14-46-15.bag
src/bycycle_model_odometry/config/: vehicle_config.yaml
src/bycycle_model_odometry/include/: odometry_calculater.h
src/bycycle_model_odometry/launch/: default.launch
src/bycycle_model_odometry/rviz/: vehicle_odometry.rviz
src/bycycle_model_odometry/src/: odometry_calculater.cpp  odometry_calculater_node.cpp
src/odometry_visualization/: CMakeLists.txt  package.xml
src/odometry_visualization/include/odometry_visualization/: rviz_visualization.hpp
src/odometry_visualization/launch/: default.launch
src/odometry_visualization/rviz/: odometry_rviz.rviz  vehicle_odometry.rviz
src/odometry_visualization/src/: rviz_visualization.cpp  rviz_visualization_node.cpp
src/rosbag_converter/: CMakeLists.txt  package.xml
src/rosbag_converter/launch/: default.launch
src/rosbag_converter/src/: main.cpp
src/vehicle_dynamic_msgs/: CMakeLists.txt  package.xml
src/vehicle_dynamic_msgs/msg/: CAN_55.msg  CAN_56.msg  DrivingParameters.msg
src/vehicle_visualization/: CMakeLists.txt  package.xml
src/vehicle_visualization/src/: rviz_visualization.cpp  rviz_visualization_node.cpp
