<?xml version="1.0"?>
<package format="2">
  <name>vehicle_dynamic_msgs</name>
  <version>1.12.0</version>
  <description>The vehicle_dynamic_msgs package</description>
  <maintainer email="icelilsincanli@gmail.com"></maintainer>
  <author email="icelilsincanli@gmail.com"></author>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>std_msgs</depend>
  
  <exec_depend>message_runtime</exec_depend>
</package>
